--- a/animal_blog_project/templates/base.html
+++ b/animal_blog_project/templates/base.html
@@ -27,6 +27,9 @@
           <a class="nav-link {% if request.path == '/' %}active{% endif %}" href="/">Home</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link {% if request.path == '/add/' %}active{% endif %}" href="{% url 'blog:add_animal' %}">Add Animal</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/admin/">Admin</a>
         </li>
       </ul>
