--- a/animal_blog_project/templates/base.html
+++ b/animal_blog_project/templates/base.html
@@ -33,6 +33,12 @@
           <a class="nav-link {% if request.path == '/add/' %}active{% endif %}" href="{% url 'blog:add_animal' %}">Add Animal</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="{% url 'about' %}">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/admin/">Admin</a>
         </li>
       </ul>
