--- a/animal_blog_project/templates/base.html
+++ b/animal_blog_project/templates/base.html
@@ -38,6 +38,22 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'contact' %}">Contact</a>
         </li>
+        {% if user.is_authenticated %}
+          <li class="nav-item d-flex align-items-center">
+            <span class="nav-link disabled mb-0 me-2">Hi, {{ user.username }}</span>
+            <form action="{% url 'logout' %}" method="post" class="d-inline">
+              {% csrf_token %}
+              <button type="submit" class="btn btn-link nav-link p-0">Logout</button>
+            </form>
+          </li>
+        {% else %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'login' %}">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'register' %}">Register</a>
+          </li>
+        {% endif %}
         <li class="nav-item">
           <a class="nav-link" href="/admin/">Admin</a>
         </li>
