--- a/animal_blog_project/static/css/style.css
+++ b/animal_blog_project/static/css/style.css
@@ -18,6 +18,22 @@ footer {
 }
 /*******************************/
 
+/*********** Hero Image Stuff *******/
+.hero {
+  position: relative;
+  overflow: hidden;
+}
+
+.hero-text {
+  z-index: 2;
+}
+
+.hero img {
+  max-height: 60vh;
+  object-fit: cover;
+}
+
+/******************************/
 
 /********* Card stuff **********/
 .card {
