--- a/animal_blog_project/static/css/style.css
+++ b/animal_blog_project/static/css/style.css
@@ -22,15 +22,30 @@ footer {
 .hero {
   position: relative;
   overflow: hidden;
+  border-radius: 20px;
 }
 
 .hero-text {
   z-index: 2;
+  padding: 0 1rem;
+}
+
+
+.hero-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.45);
+  z-index: 1; /* place overlay ABOVE image */
+  border-radius: 20px;
 }
 
 .hero img {
-  max-height: 60vh;
+  height: 60vh;
   object-fit: cover;
+  border-radius: 20px;
 }
 
 /******************************/
@@ -46,5 +61,9 @@ footer {
 }
 
 /******************************/
+
+.text-shadow {
+  text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
+}
 
 
