--- a/animal_blog_project/blog/templates/blog/animal_list.html
+++ b/animal_blog_project/blog/templates/blog/animal_list.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 {% if user.is_authenticated %}
-<div class="text-end mb-3">
+<div class="mb-4">
   <a href="{% url 'blog:add_animal' %}" class="btn btn-success">
     <i class="bi bi-plus-circle"></i> Add New Animal
   </a>
